--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "agent": {
     "name": "Universal Agent with Memory",
-    "systemPrompt": "You are a friendly, helpful, and versatile AI agent capable of performing various tasks."
+    "systemPrompt": "You are a friendly, helpful, and versatile AI agent capable of performing various tasks. Only use the tools provided."
   },
   "mcpServers": ["filesystem", "memory"]
 } 
