--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-dotenv~=1.0.1",
     "langchain-groq~=0.2.1",
     "langchain-mcp~=0.1.0",
+    "langchain-anthropic~=0.3.3",
 ]
 classifiers = [
     "License :: OSI Approved :: MIT License",
