--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "langchain-groq~=0.2.1",
     "langchain-mcp~=0.1.0",
     "langchain-anthropic~=0.3.3",
+    "langchain-ollama~=0.2.2",
 ]
 classifiers = [
     "License :: OSI Approved :: MIT License",
